# haxaml

./: .gitignore  0.6.x_roadmap.md  0.7.x_Roadmap.md  ADVANCED.md  CHANGELOG.md  CONTRIBUTING.md  FRAME.md  LONGTERM.md  MCP.md  README.md  advanced.md  assurance.md  checklist.md  goals.md  haxaml-skill.md  haxaml_analysis.md  haxamlneeds.md  pyproject.toml  research-agentic-tools-and-context-management.md  research-project-brain-and-agent-governance.md  v1.0_Roadmap.md
.github/workflows/: github-release.yml  publish.yml
docs/: architecture.md  contributing.md  mcp-tool-reference.md
docs/reports/: haxaml-0.7x-closeout.md  haxaml-critical-bug-audit.md  haxaml-test-strategy-audit.md  haxaml-vision-realignment.md
examples/minimal-governed-flow/: README.md
haxaml/: __init__.py  acts_archive.py  adoption.py  auto_export.py  benchmarks.py  brain_builder.py  cli.py  context.py  context_memory.py  export_engine.py  export_profiles.py  frame_model.py  init_templates.py  lifecycle_state.py  map_policy.py  mcp_server.py  paths.py  prebuild_templates.py  reconcile.py  runner.py  runtime_cache.py  state_manager.py  supervision.py  utils.py  validator.py  versioning.py  yaml_utils.py
haxaml/mcp/: __init__.py  adoption_helpers.py  app_core.py  base.py  export_helpers.py  lifecycle_helpers.py  policy_helpers.py  resources.py  response_helpers.py  tools.py  tools_benchmark.py  tools_frame.py  tools_lifecycle.py  tools_ops.py  tools_prebuild.py
haxaml/schemas/: acts.schema.yaml  expect.schema.yaml  facts.schema.yaml  frame.schema.yaml  map.schema.yaml  rules.schema.yaml
haxaml/services/: __init__.py  execution_models.py  execution_preflight.py  execution_records.py
haxaml/setup/: __init__.py  adoption.py  cli.py  config_merge.py  doctor.py  interactive.py  markdown.py  planner.py  registry.py  renderer.py  service.py  templates.py  workflow.py  writer.py
haxaml_ui/: __init__.py  dashboard.py
learn/: FRAME.md  haxaml-mcp.md  haxaml-prebuild.md  haxaml.md  mcp-architecture-for-haxaml.md
scripts/: bump_version.py  publish_pypi.sh
temp/: 0.4.1.spec.md  0.4.execution.md  0.4.review.md  0.4.x.md
testhaxaml/: acts.yaml  expect.yaml  facts.yaml  rules.yaml
testhaxaml/adoption/: ADOPTION.md  adoption.yaml
testhaxaml/archive/: acts-history.yaml
testhaxaml/setup/: manifest.yaml
testhaxaml/setup/targets/: generic.md
tests/: test_benchmarks.py  test_brain_builder.py  test_cli.py  test_export_engine.py  test_frame_frontmatter.py  test_import_boundaries.py  test_map_policy.py  test_mcp_server.py  test_runner.py  test_runtime_cache.py  test_setup_docs.py  test_state_manager.py  test_validator.py  test_versioning.py  test_workflow_benchmark_guardrail.py
tests/mcp/: __init__.py  conftest.py  helpers.py  test_benchmark_tool.py  test_context_refresh.py  test_dashboard.py  test_frame.py  test_lifecycle.py  test_ops.py  test_registration.py  test_resources.py
