[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "haxaml"
version = "0.7.0"
description = "Prebuild and governance for AI coding agents."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Hax" }
]
keywords = [
  "ai-agents",
  "agent-governance",
  "mcp",
  "developer-tools",
  "context-engineering"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
  "click>=8.1",
  "jsonschema>=4.20",
  "mcp>=1.0",
  "pyyaml>=6.0"
]

[project.optional-dependencies]
bench = [
  "tiktoken>=0.5"
]
ui = [
  "haxaml-ui==0.7.0"
]
full = [
  "haxaml-mcp==0.7.0",
  "haxaml-ui==0.7.0"
]
dev = [
  "build>=1.2",
  "mcp>=1.0",
  "pytest>=8.0",
  "twine>=5.0"
]
all = [
  "build>=1.2",
  "haxaml-mcp==0.7.0",
  "haxaml-ui==0.7.0",
  "mcp>=1.0",
  "pytest>=8.0",
  "tiktoken>=0.5",
  "twine>=5.0"
]

[project.scripts]
haxaml = "haxaml.cli:cli"

[project.urls]
Homepage = "https://github.com/haxsysgit/haxaml"
Repository = "https://github.com/haxsysgit/haxaml"

[tool.setuptools.packages.find]
include = ["haxaml", "haxaml.*"]

[tool.setuptools.package-data]
haxaml = ["schemas/*.yaml"]

[tool.uv.sources]
haxaml-mcp = { path = "packages/haxaml-mcp", editable = true }
haxaml-ui = { path = "packages/haxaml-ui", editable = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
